--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@headlessui/vue": "^1.7.22",
-        "@heroicons/vue": "^2.1.4"
+        "@heroicons/vue": "^2.1.4",
+        "vue3-toastify": "^0.2.2"
     }
 }
